--- a/style.css
+++ b/style.css
@@ -1545,6 +1545,7 @@ form textarea{
    letter-spacing: 1px;
    font-weight: 400;
 }
+
 @media(max-width:950px){
   .cms-box2-overlay div{
      gap:1px;
@@ -1555,32 +1556,7 @@ form textarea{
     
   }
   .service-middle-box1, .service-middle-box2, .service-middle-box3, .service-middle-box4{
-    width: 100%;
-    
-  }
-  .career-mid-section-overlay{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-  .career-mid-box1, .career-mid-box2, .career-mid-box3, .career-mid-box4, .career-mid-box5{
-    width:100%;
-  }
-
-
- .cmb2-1 p, .cmb3-1 p, .cmb4-1 p, .cmb5-1 p,
- .cmb2-2 p, .cmb3-2 p, .cmb4-2 p, .cmb5-2 p,
- .cmb2-4 p, .cmb3-4 p, .cmb4-4 p, .cmb5-4 p, .cmb2-1 h5, .cmb3-1 h5, .cmb4-1 h5, .cmb5-1 h5,
- .cmb2-2 h5, .cmb3-2 h5, .cmb4-2 h5, .cmb5-2 h5,
- .cmb2-4 h5, .cmb3-4 h5, .cmb4-4 h5, .cmb5-4 h5, .cmb1-bottom li,.cmb1-top h4, .cmb2-top h4, .cmb3-top h4, .cmb4-top h4, .cmb5-top h4{
-    font-size:11px;
-  }
- .career-mid-heading h3{
-  font-size: 12px;
- }
- 
-  .cmb2-3 p, .cmb3-3 p, .cmb4-3 p, .cmb5-3 p,
-  .cmb2-5 p, .cmb3-5 p, .cmb4-5 p, .cmb5-5 p{
-    font-size: 11px;
+    width: 100%; 
   }
 }
 
@@ -1635,7 +1611,9 @@ form textarea{
   .contact-mid-section{
     grid-template-columns: 1fr;
   }
-
+  .career-mid-section-overlay{
+    flex-direction: column;
+   }
 .career-bottom-section{
   grid-template-columns: 1fr;
   gap: 2px;
@@ -1657,6 +1635,7 @@ form textarea{
  .career-mid-heading h3{
   font-size: 12px;
  }
+ 
  .career-mid-box1, .career-mid-box2, .career-mid-box3, .career-mid-box4, .career-mid-box5{
     width:100%;
   }
