--- a/style.css
+++ b/style.css
@@ -255,13 +255,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background: #09212D;
   }
 
   #b1{
     width: 25%;
     min-height: inherit;
     background-color: #fff;
-    padding:22px;
+    padding: 22px;
   }
   #b1 .b1para{
     width:100%;
@@ -319,7 +320,7 @@
   position:absolute;
   background-color: rgba(0, 0, 0, 0.2);
   width: 100%;
-  min-height: 40vh;
+  min-height: inherit;
   z-index: 2;
 }
 #b2 figure{
@@ -447,6 +448,7 @@
     width: 20%;
     min-height: inherit; 
     position: relative;
+   
   }
   #b3top{
     width: 100%;
@@ -466,6 +468,7 @@
     color:#fff;
     width:100%;
     animation: slideTop1 2s linear infinite;
+    opacity: 0;
   }
   @keyframes slideTop1 {
     0%{
@@ -533,12 +536,13 @@
 
   #b3bottom{
     width: 100%;
-    min-height: 20vh;
+    height: 20vh;
     animation: slideRight 1s ease forwards;
     animation-delay: .7s;
     opacity: 0;
     overflow: hidden;
     position: relative;
+    z-index: 5555;
   }
   #b3bottom figure{
     position:relative;
@@ -565,7 +569,7 @@
   }
   #b4{
     width: 30%;
-    min-height: inherit;
+    min-height: 40vh;
     background-color: #000000;
     color: #fff;
     padding: 20px;
@@ -578,7 +582,7 @@
   }
   .b4-section{
     width: 80%;
-    height:24vh;
+    height:26vh;
     overflow: hidden;
     margin-top: 10px;
   }
@@ -726,7 +730,7 @@
   grid-template-columns: 25% 25% 25% 25%;
 
 }
-.about-bottom .ab1, .ab2, .ab3, .ab4{
+.ab1, .ab2, .ab3, .ab4{
   padding: 1vw;
   display: flex;
   flex-direction: column;
@@ -956,6 +960,7 @@
 .service-bottom{
   width:100%;
   min-height: 20vh;
+  
 }
 
 .service-bottom-overlay{
@@ -965,6 +970,7 @@
   flex-wrap: wrap;
   display:grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  background: #09212D;
 
 }
 .sb-oddbox{
@@ -990,6 +996,7 @@
  flex-wrap: wrap;
  gap: 8px;
  padding:15px;
+ 
 }
 /*---------------------------career-section--------------------------*/
 
@@ -1388,7 +1395,7 @@
   gap:20px;
 }
 .cms-box2-overlay p{
-  font-size:13px;
+  font-size:11px;
   width:90%;
   color:#A9A9A9;
   animation: slideRightcontact 1s ease forwards;
@@ -1545,29 +1552,75 @@ form textarea{
    letter-spacing: 1px;
    font-weight: 400;
 }
-
-@media(max-width:950px){
-  .cms-box2-overlay div{
-     gap:1px;
+@media(max-width:1100px){
+   .service-bottom-overlay{
+    grid-template-columns: 1fr 1fr 1fr;
+   }
+   .service-middle-overlay{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 50px;
+   }
+   .service-middle-box1, .service-middle-box2, .service-middle-box3, .service-middle-box4{
+    width: 100%;
+    
+   }
+   #bottom{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 50px;
+   }
+   #b1, #b2, #b3, #b4{
+    width: 100%;
+   }
+   
+}
+@media(max-width:966px){
+  
+  .register{
+    left:70%;
   }
+  .career-bottom-section div{
+   min-height: 15vh;
+  }
+  
   .service-middle-overlay{
     display:grid;
     grid-template-columns: 50% 50%;
+    gap: 5px;
     
   }
   .service-middle-box1, .service-middle-box2, .service-middle-box3, .service-middle-box4{
     width: 100%; 
   }
+  #bottom{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap:0;
+  }
+  #b1, #b2, #b3, #b4{
+    width: 100%;
+  }
+  .service-bottom-overlay{
+    grid-template-columns: 1fr 1fr 1fr;
+    margin-bottom: 100px;
+  }
+  .contact-mid-section{
+    display: grid;
+    grid-template-columns: 1fr ;
+  }
+  
 }
 
-@media(max-width:770px){
+@media(max-width:768px){
   .contact-mid-section{
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
   .service-bottom-overlay{
     grid-template-columns: 1fr 1fr 1fr;  
-    margin-bottom: 100px;;
+     margin-bottom: 100px;
+      
   }
   .about-bottom{
     grid-template-columns: 1fr 1fr;
@@ -1593,59 +1646,64 @@ form textarea{
   }
 }
 
-@media(max-width: 500px){
+@media(max-width: 654px){
+  
+  .cms-box2-overlay p{
+    font-size: 11px;
+  }
+  
+  .career-mid-box5{
+    margin-bottom: 10px;
+  }
+  .career-bottom-section div{
+    height: 20vh;
+  }
+  .send{
+    font-size: 11px;
+  }
+  .cbs1-box{
+    font-size: 11px;
+    line-height: 3;
+  }
+  .contact-mid-section{
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  
+  .rightnav{
+    display: none;
+  }
   .register{
     left:70%;
   }
-  .about-top, .service-top, .career-top-section, .contact-top-section{
-    min-height:6vh;
-   
-  }
-  .cms-box2-overlay{
-    padding:10px;
-  }
   
-  .cbs2-box{
-    text-align: center;
-  }
-  .contact-mid-section{
-    grid-template-columns: 1fr;
-  }
-  .career-mid-section-overlay{
-    flex-direction: column;
+  .career-mid-heading h3{
+    font-size: 12px;
    }
-.career-bottom-section{
-  grid-template-columns: 1fr;
-  gap: 2px;
-}
-.cbs1-box{
-  grid-template-columns: 1fr;
-  font-size: 15px;
-  line-height: 4;
-}
+   .cbs1-box{
+    grid-template-columns: 1fr;
+   }
 
-
- .cmb2-1 p, .cmb3-1 p, .cmb4-1 p, .cmb5-1 p,
- .cmb2-2 p, .cmb3-2 p, .cmb4-2 p, .cmb5-2 p,
- .cmb2-4 p, .cmb3-4 p, .cmb4-4 p, .cmb5-4 p, .cmb2-1 h5, .cmb3-1 h5, .cmb4-1 h5, .cmb5-1 h5,
- .cmb2-2 h5, .cmb3-2 h5, .cmb4-2 h5, .cmb5-2 h5,
- .cmb2-4 h5, .cmb3-4 h5, .cmb4-4 h5, .cmb5-4 h5, .cmb1-bottom li,.cmb1-top h4, .cmb2-top h4, .cmb3-top h4, .cmb4-top h4, .cmb5-top h4{
-    font-size: 11px;
+  .career-mid-section-overlay{
+    display: grid;
+    grid-template-columns:1fr;
   }
- .career-mid-heading h3{
-  font-size: 12px;
- }
- 
- .career-mid-box1, .career-mid-box2, .career-mid-box3, .career-mid-box4, .career-mid-box5{
+  .career-mid-box1, .career-mid-box2, .career-mid-box3, .career-mid-box4, .career-mid-box5{
     width:100%;
   }
   .cmb2-3 p, .cmb3-3 p, .cmb4-3 p, .cmb5-3 p,
   .cmb2-5 p, .cmb3-5 p, .cmb4-5 p, .cmb5-5 p{
     font-size: 11px;
   }
-  .career-mid-section-overlay{
-    display: grid;
-    grid-template-columns:1fr 1fr 1fr;
+  .cmb2-1 p, .cmb3-1 p, .cmb4-1 p, .cmb5-1 p,
+ .cmb2-2 p, .cmb3-2 p, .cmb4-2 p, .cmb5-2 p,
+ .cmb2-4 p, .cmb3-4 p, .cmb4-4 p, .cmb5-4 p, .cmb2-1 h5, .cmb3-1 h5, .cmb4-1 h5, .cmb5-1 h5,
+ .cmb2-2 h5, .cmb3-2 h5, .cmb4-2 h5, .cmb5-2 h5,
+ .cmb2-4 h5, .cmb3-4 h5, .cmb4-4 h5, .cmb5-4 h5, .cmb1-bottom li,.cmb1-top h4, .cmb2-top h4, .cmb3-top h4, .cmb4-top h4, .cmb5-top h4{
+    font-size: 11px;
+  }
+  .career-bottom-section{
+    grid-template-columns: 1fr;
   }
   .service-bottom-overlay{
     grid-template-columns: 1fr;
@@ -1661,7 +1719,7 @@ form textarea{
 .service-middle-overlay{ 
     display: grid;
     grid-template-columns: 1fr;
-
+    gap: 5px;
   }
   .service-middle-box1, .service-middle-box2, .service-middle-box3, .service-middle-box4 {
     width:100%;
@@ -1692,9 +1750,7 @@ form textarea{
     align-items: flex-start;
     flex-direction: column;
    }
-   #bottom{
-    min-height: 20vh;
-   }
+   
    #overlay #text #textright p{
     width: initial;
     margin-top: 20px;
@@ -1707,14 +1763,15 @@ form textarea{
    }
 
    #bottom{
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
    }
    #b1{
     width: 100%;
    }
    #b2{
     width: 100%;
-    min-height: 40vh;
+    
    } 
    
    #b3{
